# parrot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yaml
parrot/: __init__.py  __main__.py
parrot/audio/extraction/: audio_extraction.py
parrot/audio/transcription/: model.py  transcribe.py
parrot/audio/transcription/transcript/: microsoftstream.py  transcript_type.py
parrot/audio/utils/: file_utils.py  plotting.py  silence.py
parrot/commons/asr/: base.py  faster_whisper.py  openai_whisper.py  utils.py
parrot/commons/generative/: base.py  llamacpp.py  openai_gpt.py
parrot/config/: config.py  config_model.py
parrot/recap/: __init__.py  recap_generator.py  tasks.py
parrot/resources/: Brainerdì-20231103_141650- Advanced Fusion Retrieval + Roadmaps.sh-transcription.txt  default_configs.json
parrot/transcript/: microsoftstream.py  speakerstamp.py  timestamp.py  transcript.py
parrot/utils/: itertools.py
parrot1/: __init__.py  __main__.py
parrot1/audio/extraction/: audio_extraction.py
parrot1/audio/transcription/: transcribe.py
parrot1/audio/transcription/transcript/: microsoftstream.py
parrot1/audio/utils/: plotting.py
parrot1/commons/asr/: base.py  faster_whisper.py  openai_whisper.py
parrot1/commons/generative/: base.py  llamacpp.py  openai_gpt.py
parrot1/commons/models/: language.py
parrot1/config/: config.py  config_model.py
parrot1/recap/: __init__.py  recap_generator.py  tasks.py
parrot1/resources/: default_configs.json
parrot1/utils/: file_utils.py
tests/: splitter_test.py
