[tool.poetry]
name = "parrot"
version = "0.1.0"
description = "A tool for writing a recap mail or report from a video recording of a call"
authors = ["Gerlando Re <g.re@reply.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
ffmpeg-python = "~0.2.0"
openai = "~1.2.2"
pydub = "~0.25.1"
typer = {extras = ["all"], version = "~0.9.0"}
matplotlib = { version = "~3.8.1", optional = true }
python-docx = { version = "~1.1.0", optional = true }
pytimeparse2 = { version = "~1.7.1", optional = true }

[tool.poetry.extras]
docx = ["python-docx", "pytimeparse2"]
plotting = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
ruff = "~0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
