[tool.poetry]
name = "parrot1"
version = "0.1.1"
description = "A tool for writing a recap mail or report from a video recording of a call"
authors = ["Gerlando Re <gerlaxrex@gmail.com>", "Federico Minutoli <fede97.minutoli@gmail.com>", "Giorgio Crepaldi <giorgio.crepaldi93@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
parrot = "parrot1.__main__:app"

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
ffmpeg-python = "~0.2.0"
openai = "~1.2.2"
pydub = "~0.25.1"
typer = {extras = ["all"], version = "~0.9.0"}
matplotlib = { version = "~3.8.1", optional = true }
python-docx = { version = "~1.1.0", optional = true }
pytimeparse2 = { version = "~1.7.1", optional = true }
faster-whisper = {version = "^0.9.0", optional = true}
llama-cpp-python = {version = "^0.2.20", optional = true}
huggingface-hub = {version = "^0.19.4", optional = true}
numpy = "^1.26.2"
tiktoken = "^0.5.2"

[tool.poetry.extras]
docx = ["python-docx", "pytimeparse2"]
plotting = ["matplotlib"]
faster-whisper = ["faster-whisper"]
llama-cpp = ["llama-cpp-python", "huggingface-hub"]
os-models = ["faster-whisper", "llama-cpp-python", "huggingface-hub"]
all = ["python-docx", "pytimeparse2", "matplotlib", "faster-whisper", "llama-cpp-python", "huggingface-hub"]

[tool.poetry.group.dev.dependencies]
ruff = "~0.1.5"
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
